--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=kishima
 maintainer=kishima
 sentence=An Arduino library of mircro mruby VM implementation for Ard
 paragraph=
-category=Script language
+category=Other
 url=https://github.com/kishima/micro_mruby_for_arduino_uno
 architectures=avr
-includes=mmruby.h
+includes=mmruby_arduino.h
